<resources>
    <string name="app_name">Marvel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marvel_logo">marvel logo</string>
    <string name="search_icon">search icon</string>
    <string name="search">search</string>
    <string name="character_image">character image</string>
    <string name="blue_effect">blue effect</string>
    <string name="description">Description</string>
    <string name="comics">Comics</string>
    <string name="back_button">back button</string>
    <string name="item_image">item image</string>
    <string name="Stories">Stories</string>
    <string name="Series">Series</string>
    <string name="Events">Events</string>
    <string name="bg_splash">background splash</string>
    <string name="cancel">Cancel</string>
    <string name="bg">background</string>
</resources>